syntax = "proto3";

package prime;

option java_package = "com.proto.prime";
option java_multiple_files = true;

message Prime {
    int64 number = 1;
}

message PrimeManyTimesRequest {
    Prime prime = 1;
}

message PrimeManyTimesResponse {
    int64 result = 1;
}

service PrimeService {
    rpc PrimeManyTimes(PrimeManyTimesRequest) returns (stream PrimeManyTimesResponse) {}
}
